<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorControlHighlight"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical"
    android:paddingLeft="@dimen/activity_horizontal"
    android:paddingRight="@dimen/activity_horizontal"
    android:paddingTop="@dimen/activity_vertical"
    android:weightSum="1"
    tools:context="br.com.sistemacontrolepredial.LoginActivity">


    <ImageView
        android:id="@+id/logoEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="0.08"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/containerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoEmpresa"
        android:background="@android:color/background_light"
        android:elevation="0dp"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingLeft="@dimen/activity_vertical"
        android:paddingRight="@dimen/activity_vertical"
        android:paddingStart="20dp"
        android:paddingTop="50dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloLogin"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textColor="@color/colorFontTitulo"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/campoNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/containerLogin"
            android:drawableLeft="@drawable/account"
            android:hint="@string/nomeUsuario"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/campoSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/campoNome"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/senhaUsuario"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/botaoLogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/containerLogin"
        android:layout_marginTop="19dp"
        android:background="@color/colorPrimary"
        android:elevation="8dp"
        android:onClick="realizarLogin"
        android:text="@string/botaoLogar"
        android:textColor="@color/colorButtonFont" />

</RelativeLayout>
